[package]
name = "dioxus_storage"
version = "0.0.3"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
description = "A simple storage library for Dioxus"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Demonthos/dioxus-storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
dioxus = "0.4"
rustc-hash = "1.1.0"
serde = { version = "1.0.7", features = ["derive"] }
postcard = { version = "1.0.2", features = ["use-std"] }
once_cell = "1.17.0"
web-sys = { version = "0.3.61", features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
yazi = "0.1.4"
wasm-bindgen = "0.2"
directories = "4.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "4.0.1"

[dev-dependencies]
dioxus-desktop = "0.4"

[features]
hydrate = []
ssr = []
